<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kursutvärdering</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Fråga 1</string>
    <string name="title_section2">Fråga 2</string>
    <string name="title_section3">Fråga 3</string>
    <string name="title_section4">Fråga 4</string>
        <string name="title_section5">Fråga 5</string>
        <string name="title_section6">Fråga 6</string>
        
         <string name="questask">Vad kunde du ha gjort bättre på kursen? </string>


    <string name="question1">Jag har en bra uppfattning om de krav som ställts på mig utifrån kursmål och 
kriterier?</string>
    <string name="questions1"> Stämmer helt</string>
    <string name="questions2"> Stämmer</string>
    <string name="questions3">Stämmer 	</string>
    <string name="questions4">Stämmer inte alls</string>
    <string name="question2">Jag har tagit ett aktivt ansvar för mitt eget lärande på kursen</string>
    <string name="q21"> Stämmer helt</string>
    <string name="question3">Vilken kurs har du läst?</string>
    <string name="q3"></string>
    <string name="q8"></string>
    <string name="q9"></string>
    <string name="q10"></string>
    <string name="INFC16">INFC16</string>
    <string name="INFC15">INFC15</string>
    <string name="INFC14">INFC14</string>
    <string name="feedbackbody"></string>
    <string name="feedbackbody1"></string>
    <string name="feedbackbutton">Slutför</string>
    <string name="feedbackresponse">Godkänn</string>
    <string name="question4">Vilken Lärare har du haft?</string>
    <string name="q4"></string>
    <string name="l1">Anders Svensson</string>
    <string name="l2">Karl Djurholt</string>
    <string name="l3">Sten AskBlom</string>
    <string name="l4">Björn Undén</string>
    <string name="question5">Välj ditt kön</string>
    <string name="q5"></string>
    <string name="f">Flicka</string>
    <string name="m">Pojke</string>
    <string name="question6">Jag är nöjd med min egen arbetsinsats på kursen   </string>
    <string name="q6"></string>
    <string name="q61"> Stämmer helt</string>
    <string name="q62"> Stämmer</string>
    <string name="q63">Stämmer inte</string>
    <string name="q64">Stämmer inte alls</string>
    <string name="question7">Jag är nöjd med det jag har lärt mig på kursen</string>
    <string name="q7"></string>
    <string name="question8">Läromedlen på kursen har varit bra?</string>
    <string name="question9">Jag känner att jag har haft ett verkligt inflytande över hur vi jobbar på kursen?</string>
    <string name="question10">Jag känner att jag har haft ett verkligt inflytande över examinationerna (prov, 
hemprov, muntligt, laborationer, fördjupningsarbeten etc…) på kursen</string>
    <string name="question11"> Läraren på kursen organiserar undervisningen på ett bra sätt?</string>
    <string name="question12">Läraren på kursen har lyckats skapa ett bra arbetsklimat där alla får komma till tals 
och blir respekterade?</string>
    <string name="question13">Läraren är bra på att förklara det som är svårt i undervisningen?</string>
    <string name="question14">Läraren ger mig det stöd, den hjälp och uppmuntran jag behöver för att nå mina mål?</string>
    <string name="question15"> Jag har, under kursens gång, fått tillräcklig information om hur jag ligger till?</string>
        <string name="question16">  Jag har, under kursens gång, fått tillräcklig information om hur jag ska gå till väga 
för att förbättra mina studieresultat?</string>
    
    <string name="q11"></string>
    <string name="q12"></string>
   <string name="q13"></string>
  <string name="q14"></string>
  <string name="q15"></string>
          <string name="q16"></string>
  
    
        

</resources>